--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,14 @@
 
 /* Your CSS Code here. */
+body {
+    font-family: Arial, sans-serif;
+}
+
+a {
+    text-decoration: none;
+    color: blue;
+}
+
+a:hover {
+    color: red;
+}
